# pihole-caching

./: .gitignore  CMakeLists.txt  PiHoleCaching.sln  PiHoleCaching.vcxproj  PiHoleCaching.vcxproj.filters  README.md  main.cpp  pihole-caching.hxx  queryAnswerType.h  queryDnsType.h
objectmodel/: queryInfo.h  queryResult.h
